manifests/longhorn/templates/svc-longhorn.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-service
  namespace: longhorn
spec:
  selector:
    app: longhorn-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
