manifests/longhorn/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-k8s-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - n2app-longhorn.pea.co.th
      secretName: grafana-k8s-secret
  rules:
    - host: n2app-longhorn.pea.co.th
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-service
                port:
                  number: 80
